# smarty-rust-sdk

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  devenv.nix
.claude/: settings.json
.github/workflows/: publish.yml  test.yml
examples/: international_autocomplete_api.rs  international_street_api.rs  logger.rs  us_autocomplete_pro_api.rs  us_extract_api.rs  us_reverse_geo_api.rs  us_street_api.rs  us_zipcode_api.rs
smarty-rust-proc-macro/: Cargo.toml
smarty-rust-proc-macro/src/: lib.rs
smarty-rust-sdk/: CHANGELOG.md  Cargo.toml  README.md
smarty-rust-sdk/examples/: international_autocomplete_api.rs  international_postal_code_api.rs  international_street_api.rs  logger.rs  us_autocomplete_api.rs  us_autocomplete_pro_api.rs  us_enrichment_address_search_api.rs  us_enrichment_api.rs  us_enrichment_business_api.rs  us_enrichment_business_name_search_api.rs  us_enrichment_etag_api.rs  us_extract_api.rs  us_reverse_geo_api.rs  us_street_api.rs  us_street_component_analysis.rs  us_street_iana_timezone.rs  us_street_match_strategy.rs  us_street_multithread.rs  us_zipcode_api.rs
smarty-rust-sdk/src/: lib.rs
smarty-rust-sdk/src/international_autocomplete_api/: client.rs  lookup.rs  mod.rs  suggestion.rs
smarty-rust-sdk/src/international_postal_code_api/: candidate.rs  client.rs  lookup.rs  mod.rs
smarty-rust-sdk/src/international_street_api/: candidate.rs  client.rs  lookup.rs  mod.rs
smarty-rust-sdk/src/sdk/: authentication.rs  batch.rs  client.rs  error.rs  logging.rs  mod.rs  options.rs  retry_strategy.rs  version.rs
smarty-rust-sdk/src/us_autocomplete_api/: client.rs  lookup.rs  mod.rs  suggestion.rs
smarty-rust-sdk/src/us_autocomplete_pro_api/: client.rs  lookup.rs  mod.rs  suggestion.rs
smarty-rust-sdk/src/us_enrichment_api/: business.rs  client.rs  financial.rs  geo.rs  lookup.rs  mod.rs  principal.rs  request.rs  response.rs  results.rs  risk.rs  secondary.rs
smarty-rust-sdk/src/us_extract_api/: client.rs  extraction.rs  lookup.rs  mod.rs
smarty-rust-sdk/src/us_reverse_geo_api/: address.rs  client.rs  lookup.rs  mod.rs
smarty-rust-sdk/src/us_street_api/: candidate.rs  client.rs  lookup.rs  mod.rs
smarty-rust-sdk/src/us_zipcode_api/: candidate.rs  client.rs  lookup.rs  mod.rs
smarty-rust-sdk/tests/: us_enrichment_http.rs  us_reverse_geo_http.rs  us_street_integration.rs
src/: batch.rs  builder.rs  candidate.rs  lib.rs  lookup.rs  main.rs  sdk_client.rs  smarty_client.rs
src/international_autocomplete_api/: client.rs  lookup.rs  mod.rs  suggestion.rs
src/international_street_api/: client.rs  lookup.rs  mod.rs
src/sdk/: authentication.rs  batch.rs  client.rs  error.rs  mod.rs  options.rs
src/us_autocomplete_api/: client.rs  lookup.rs  mod.rs  suggestion.rs
src/us_autocomplete_pro/: client.rs  lookup.rs
src/us_autocomplete_pro_api/: client.rs  lookup.rs  mod.rs
src/us_extract_api/: client.rs  extraction.rs  lookup.rs  mod.rs
src/us_reverse_geo/: address.rs  client.rs  lookup.rs  mod.rs
src/us_reverse_geo_api/: client.rs  lookup.rs  mod.rs
src/us_street_api/: batch.rs  client.rs  lookup.rs  mod.rs
src/us_zipcode_api/: candidate.rs  client.rs  lookup.rs  mod.rs
