[package]
name = "smarty-rust-proc-macro"
edition = "2021"
description = "The official client macro for creating Smarty APIs for Rust"
license-file = "../LICENSE.md"
repository = "https://github.com/smarty/smarty-rust-sdk"
rust-version = "1.88.0"
readme = "../README.md"

version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
quote = "1.0.41"
syn = "2.0.106"
