[package]
name = "smarty-rust-sdk"
edition = "2021"
description = "The official client libraries for accessing Smarty APIs from Rust"
license = "Apache-2.0"
reposity = "https://github.com/smarty/smarty-rust-sdk"

version.workspace = true

[dependencies]
async-trait = "0.1.59"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["json"] }
reqwest-middleware = "0.2.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_repr = "0.1.9"
task-local-extensions = "0.1.3"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
smarty-rust-proc-macro = {path="../smarty-rust-proc-macro", version="0.0.0"} # This version will be replaced at publish time, Do not change it.
anyhow = "1.0.72"
hyper = "0.14.27"

[dev-dependencies]
futures = "0.3.28"

[lib]
name = "smarty_rust_sdk"
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "us_street_api"

[[example]]
name = "us_reverse_geo_api"

[[example]]
name = "us_zipcode_api"

[[example]]
name = "us_extract_api"

[[example]]
name = "us_autocomplete_pro_api"

[[example]]
name = "international_street_api"

[[example]]
name = "international_autocomplete_api"

[[example]]
name = "logger"

[[example]]
name = "us_street_multithread"
