[package]
name = "smarty-rust-sdk"
edition = "2021"
description = "The official client libraries for accessing Smarty APIs from Rust"
license-file = "../LICENSE.md"
repository = "https://github.com/smarty/smarty-rust-sdk"
rust-version = "1.63.0"
readme = "../README.md"

version.workspace = true

[dependencies]
async-trait = "0.1.73"
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
reqwest-middleware = "0.2.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
task-local-extensions = "0.1.4"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
smarty-rust-proc-macro = {path="../smarty-rust-proc-macro", version="0.0.0"} # This version will be replaced at publish time, Do not change it.
anyhow = "1.0.75"
hyper = "0.14.27"

[dev-dependencies]
futures = "0.3.28"

[lib]
name = "smarty_rust_sdk"
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "us_street_api"

[[example]]
name = "us_reverse_geo_api"

[[example]]
name = "us_zipcode_api"

[[example]]
name = "us_extract_api"

[[example]]
name = "us_autocomplete_pro_api"

[[example]]
name = "international_street_api"

[[example]]
name = "international_autocomplete_api"

[[example]]
name = "logger"

[[example]]
name = "us_street_multithread"
