[package]
name = "smarty-rust-sdk"
edition = "2021"
description = "The official client libraries for accessing Smarty APIs from Rust"
license-file = "../LICENSE.md"
repository = "https://github.com/smarty/smarty-rust-sdk"
rust-version = "1.88.0"
readme = "../README.md"

version.workspace = true

[dependencies]
async-trait = "0.1.89"
env_logger = "0.10.2"
log = "0.4.28"
reqwest = { version = "0.13.1", features = ["json"] }
reqwest-middleware = { version = "0.5.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
tokio = { version = "1.38.2", features = ["full"] }
url = "2.5.8"
smarty-rust-proc-macro = {path="../smarty-rust-proc-macro", version="0.0.0"} # This version will be replaced at publish time, Do not change it.
anyhow = "1.0.100"
hyper = "1.10.1"
thiserror = "2.0.17"

[dev-dependencies]
futures = "0.3.31"
wiremock = "0.6"

[lib]
name = "smarty_rust_sdk"
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "us_street_api"

[[example]]
name = "us_reverse_geo_api"

[[example]]
name = "us_zipcode_api"

[[example]]
name = "us_extract_api"

[[example]]
name = "us_autocomplete_pro_api"

[[example]]
name = "us_autocomplete_api"

[[example]]
name = "international_street_api"

[[example]]
name = "international_autocomplete_api"

[[example]]
name = "international_postal_code_api"

[[example]]
name = "logger"

[[example]]
name = "us_street_multithread"

[[example]]
name = "us_enrichment_business_api"
